--- a/html/RelationalConcepts/match-mismatch/dog/game_page1.html
+++ b/html/RelationalConcepts/match-mismatch/dog/game_page1.html
@@ -7,7 +7,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../../../css/RelationalConcepts/match-mismatch/dog/game_page1.css">
   <link rel="stylesheet" href="../../../../css/homepage/header.css">
-
 </head>
 <body>
 
@@ -29,29 +28,29 @@
   </div>
   <div class="banner-blue">yang mana anjing?</div>
 </div>
-  <!-- =============================
-       LAYOUT GAMBAR
-  ============================= -->
-  <div class="image-layout">
-    <div class="left-image">
-      <img src="../../../../assets/images/dog.png" alt="anjing" data-answer="correct">
-      <div class="answer-btn-container">
-        <div class="answer-design">
-          <span class="answer-text">anjing</span>
-        </div>
+
+<!-- =============================
+     LAYOUT GAMBAR
+============================= -->
+<div class="image-layout">
+  <div class="left-image">
+    <img src="../../../../assets/images/dog.png" alt="Anjing" data-answer="reference">
+    <div class="answer-btn-container">
+      <div class="answer-design">
+        <span class="answer-text">anjing</span>
       </div>
-    </div>
-
-    <div class="right-images">
-      <img src="../../../../assets/images/cow.png" alt="Lembu" data-answer="wrong" class="clickable-image">
-      <img src="../../../../assets/images/dog1.png" alt="anjing1" data-answer="correct" class="clickable-image">
-      <img src="../../../../assets/images/dog.png" alt="anjing" data-answer="correct" class="clickable-image">
-      <img src="../../../../assets/images/cow1.png" alt="lembu1" data-answer="wrong" class="clickable-image">
-
     </div>
   </div>
 
-      <!-- 🎉 SCORE MODAL (Hidden by default) -->
+  <div class="right-images">
+    <img src="../../../../assets/images/cow.png" alt="Lembu" data-answer="wrong" class="clickable-image">
+    <img src="../../../../assets/images/dog1.png" alt="Anjing 1" data-answer="correct" class="clickable-image">
+    <img src="../../../../assets/images/dog2.png" alt="Anjing 2" data-answer="correct" class="clickable-image">
+    <img src="../../../../assets/images/cow1.png" alt="Lembu 1" data-answer="wrong" class="clickable-image">
+  </div>
+</div>
+
+<!-- 🎉 SCORE MODAL (Hidden by default) -->
 <div class="score-modal" id="scoreModal" style="display: none;">
   <div class="score-container">
     <!-- ⭐ Stars embedded at top of bukit -->
@@ -73,34 +72,60 @@
     <!-- 📦 Score Box -->
     <div class="score-box-wrapper">
       <div class="score-box">
-        <div class="score-value" id="finalScoreDisplay">2/2</div>
+        <div class="score-value" id="finalScoreDisplay">0/2</div>
       </div>
     </div>
   </div>
 </div>
 
-  <!-- BACK BUTTON -->
+<!-- BACK BUTTON -->
 <div class="back-button-container">
-  <a href="../../../../html/RelationalConcepts/match-mismatch/snake/game_page1.html">
+  <a href="../snake/game_page1.html">
     <img src="../../../../assets/images/back.png" alt="Back Button" class="back-button">
   </a>
 </div>
 
-    <!-- NEXT BUTTON -->
-    <div class="next-button-container">
-        <a href="../../../../html/RelationalConcepts/match-mismatch/spider/game_page1.html">
-            <img src="../../../../assets/images/next.png" alt="Next Button" class="next-button" id="nextButton" style="display: none;">
-        </a>
-    </div>
+<!-- NEXT BUTTON -->
+<div class="next-button-container">
+  <a href="../spider/game_page1.html">
+    <img src="../../../../assets/images/next.png" alt="Next Button" class="next-button" id="nextButton" style="display: none;">
+  </a>
+</div>
 
-    <script src="../../../../js/RelationalConcepts/match-mismatch/dog/game_page1.js"></script>
+<!-- FIREBASE SDK (MUST BE FIRST!) -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
-    <!-- Load initHeader.js FIRST -->
+<!-- FIREBASE CONFIGURATION -->
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCpDrWgLXXHK7_9nioEQGBKJkUv4byCEd4",
+    authDomain: "idzmir-kids-hub.firebaseapp.com",
+    projectId: "idzmir-kids-hub",
+    storageBucket: "idzmir-kids-hub.firebasestorage.app",
+    messagingSenderId: "301692363279",
+    appId: "1:301692363279:web:ba7c6547b36e433d6eb97a"
+  };
+
+  // Initialize Firebase
+  if (!firebase.apps.length) {
+    firebase.initializeApp(firebaseConfig);
+    console.log('✅ Firebase initialized successfully');
+  }
+</script>
+
+<!-- GAME SESSION MANAGER -->
+<script src="../../../../js/gameSessionManager.js"></script>
+
+<!-- DOG MATCHING GAME SCRIPT -->
+<script src="../../../../js/RelationalConcepts/match-mismatch/dog/game_page1.js"></script>
+
+<!-- Load initHeader.js -->
 <script src="../../../../js/homepage/initHeader.js"></script>
 
-<!-- THEN call initializeHeader with correct path -->
+<!-- Initialize Header -->
 <script>
-  initializeHeader('../../../homepage/header.html');
+  initializeHeader('../../../homepage/header.html', '/assets');
 </script>
 
 </body>
